--- a/css/beeld.config
+++ b/css/beeld.config
@@ -1,31 +1,40 @@
 tasks =[{}]
 
-    build_css =[{}]
+    build =[{}]
         
         src =[]
-            ./charset.css
-            ./normalize.css
-            ./responsive.css
-            #./animate.css
-            #./bubbles.css
-            ./style.css
+        ./charset.css
+        ./normalize.css
+        ./responsive.css
+        #./animate.css
+        #./bubbles.css
+        ./style.css
         @
 
         minify ={}
-
             cssmin =[]
-                #--no-minify
-                --remove-comments
-                --vendor-prefixes
-                --hsla2rgba
-                --rgb2hex
-                --embed-images
-                #--embed-fonts
-                #--embed-imports
+            #--no-minify
+            --remove-comments
+            --vendor-prefixes
+            --hsla2rgba
+            --rgb2hex
+            --embed-images
+            #--embed-fonts
+            #--embed-imports
             @
-
         @
 
-        out = ../style.min.css
+        out = ./style.min.css
     @
+    
+    bundle =[{}]
+        
+        bundle =[]
+        ./style.min.css
+        ./controls-spinners.min.css
+        @
+
+        out = ../style.bundle.css
+    @
+        
 @
